Perkin-UAT/force-app/main/default/objects/SMAX_PS_ComplaintFaultCode__c/SMAX_PS_ComplaintFaultCode__c.object-meta.xml
<CustomObject>
    <description>Complaint Fault Codes - Part of ServiceMax</description>
    <label>Complaint Fault Code</label>
    <nameField>
        <displayFormat>CFCN-{0000000000}</displayFormat>
        <label>Complaint Fault Code Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaint Fault Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>