Perkin-UAT/force-app/main/default/objects/SMAX_PS_ComplaintFaultCode__c/fields/SMAX_PS_FaultDescription__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_FaultDescription__c</fullName>
    <description>Fault Description</description>
    <inlineHelpText>Fault Description</inlineHelpText>
    <label>Fault Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>